# Oblivia_release

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile.msvc  Makefile.posix  README.md  interpreter.h  main.cpp  relp.h  repl.h  resource.rc
Expression/: expression.h
Expression/implement/: expression.cpp
Situation/: situation.h
Situation/implement/: situation.cpp
Statement/: statement.h
Statement/implement/: block.cpp  borrow.cpp  break.cpp  continue.cpp  else.cpp  execute.cpp  expr.cpp  if.cpp  ifn.cpp  include.cpp  let.cpp  move.cpp  print.cpp  return.cpp  scan.cpp  statement.cpp  while.cpp
Tokenize/: checker.h  tokenize.h
Tokenize/implement/: checker.cpp  tokenize.cpp
TypeSystem/: array.h  function.h  function_call.h  number.h  object.h  operator.h  reference.h  string.h  type_system.h  value.h  variable.h
TypeSystem/implement/: array.cpp  function.cpp  function_call.cpp  number.cpp  object.cpp  operator.cpp  reference.cpp  string.cpp  value.cpp  variable.cpp
docs/: language.md
examples/: test.obl  test_include.obl
implement/: interpreter.cpp  relp.cpp  repl.cpp
